--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "facebook/pixel-for-wordpress",
   "description": "Facebook Pixel plugins for wordpress",
-  "type": "project",
+  "type": "wordpress-plugin",
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "phing/phing": "3.0.0-alpha1",
