--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
         <exclude name="vendor/**" />
         <exclude name="task/**" />
         <exclude name="__tests__/**" />
+        <exclude name=".idea/**" />
     </fileset>
 
     <!-- ============================================  -->
